2006-12-12  Pierre Chifflier  <pollux@wzdftpd.net>

	* feature: new command SITE SHOWLOG, to display the most recent log messages

2006-12-07  Pierre Chifflier  <pollux@wzdftpd.net>

	* --- svn commit TAG: rel-0-8-1

2006-11-30  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: truncate file when overwriting (Closes: #0065)

2006-11-16  Pierre Chifflier  <pollux@wzdftpd.net>

	* bugfix: send reply 426 when data connection times out (Closes: #0062)
	* feature: add support for IDNT command, and bnc_list configuration
	command (used by bnc)

2006-11-13  Pierre Chifflier  <pollux@cpe.fr>

	* feature: kill clients instantly when exiting

2006-10-24  Pierre Chifflier  <pollux@cpe.fr>

	* feature: add config variable [sfv] create_symlinks to create
	symbolic links for incomplete files (Closes: #0055)
	* bugfix: segfault when removing incomplete indicator on windows [sfv]

2006-10-19  Pierre Chifflier  <pollux@cpe.fr>

	* feature: add event WIPE and PREWIPE

2006-09-23  Pierre Chifflier  <pollux@wzdftpd.net>

	* --- svn commit TAG: rel-0-8-0

2006-09-17  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: trying to learn to windows how to move files and directories
	(Closes: #0051)

2006-09-11  Pierre Chifflier  <pollux@cpe.fr>

	* feature: enhance libwzd: better error handling, inline documentation
	* bugfix: read/write group permissions in backend plaintext
	* bugfix: hide VFS entries to users/groups not listed in VFS permissions

2006-09-07  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: random characters in MLSD (Closes: #0046)
	* bugfix: provides Type in MLSD, even for VFS (Really Closes: #0042)
	* bugfix: segfault in RMDIR when using SFV module without all needed parameters
	* bugfix: PREMKDIR event always denies MKD unless $wzd::return is set
	explicitly (Perl module, Closes: #0043)

2006-09-04  Pierre Chifflier  <pollux@cpe.fr>

	* bugfix: use correct port for data connections (Closes: #0047)

2006-08-01  Pierre Chifflier  <pollux@cpe.fr>
